fix(board): stopped flickering (as much as possible)

--- a/app/client/stylesheets/components/boardview/boardview-lane.sass
+++ b/app/client/stylesheets/components/boardview/boardview-lane.sass
@@ -13,6 +13,7 @@
 
     &__content
         list-style: none
+        overflow-x: hidden
         overflow-y: scroll
         height: 100%
         padding: 10px
@@ -36,8 +37,26 @@
             font-weight: 600
             outline: 0
             padding: 0 10px
-            width: calc(100% + 20px)
+            width: calc(100% - 10px)
             font-size: 15px
+
+        &__text
+            display: inline-block
+            width: calc(100% - 10px)
+            cursor: pointer
+
+            span
+                background-color: #ccc
+                color: #fff
+                width: 24px
+                height: 24px
+                display: inline-block
+                text-align: center
+                line-height: 24px
+                margin-top: -5px
+                border-radius: 50%
+                font-size: 12px
+                font-weight: 700
 
         &__remove-button
             position: absolute
